@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-07-09
+ * Fixed the formatting of a "you need to log in" message.
+
 2019-06-04
  * Added comments as a directive to wing.vue.js to be used in conjunction with Wing::Role::Result::Comment.
 
